Bug 883661 - Handle lazy functions when doing higher order fast invokes and in numeric comparator pattern matching, r=luke.